# qrt_api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
app/: app.py  contract_optimizer.py  dummy_project_for_profiling.py  memray-flamegraph-dummy_project_for_profiling.py.91225.html  models.py
app/memray_examples/: dummy_project_for_profiling.py  memray-flamegraph-dummy_project_for_profiling.py.83286.html  memray-flamegraph-dummy_project_for_profiling.py.89811.html
tests/: conftest.py  test_contract_optimizer.py
tests/unit/: test_app.py  test_contract_optimizer.py  test_models.py
