[tool.poetry]
name = "qrt-api"
version = "0.0.1"
description = ""
authors = ["Jori Geysen"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.85.0"                             # MIT
gunicorn = "20.1.0"                             # MIT
uvicorn = "0.19.0"                              # BSD 3-Clause

[tool.poetry.dev-dependencies]
autoflake = "^1.7.7"
black = "^22.10.0"                              # MIT
isort = "^5.10.1"                               # MIT
mypy = "^0.982"                                 # MIT
pre-commit = "^2.20.0"                          # MIT
pylint = "^2.8.2"                               # GPL, but only used as a tool
pylint-quotes = "^0.2.0"                        # MIT
pytest = "^7.1.3"                               # MIT
pytest-cov = "^4.0.0"                           # MIT
pytest-pylint = "^0.19.0"                       # MIT
pytest-watch = "^4.2.0"                         # MIT
pytest-xdist = "^2.5.0"                         # MIT
pytest-lazy-fixture = "^0.6.3"                  # MIT
flake8 = "^5.0.4"                               # MIT
flake8-docstrings = "^1.6.0"                    # MIT
darglint = "^1.8.1"                             # MIT

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"